feat: US-138 - [EX-013] 实盘 fill 异常分类
